refactor style directory structure

--- a/src/client/styles/global.css
+++ b/src/client/styles/global.css
@@ -2,12 +2,12 @@
 @import './base/reset.css';
 
 html {
-  font-family: 'Noto Sans KR', 'Noto Sans CJK KR', sans-serif;
+  font-family: 'Pretendard', sans-serif;
   height: 100%;
 }
 
 body {
-  font-family: 'Noto Sans KR', 'Noto Sans CJK KR', sans-serif;
+  font-family: 'Pretendard', sans-serif;
   background-color: var(--color-bg-primary);
   color: var(--color-text-default);
   height: 100%;
