--- a/src/client/components/layout/shared/navbar/style/NavBar.module.css
+++ b/src/client/components/layout/shared/navbar/style/NavBar.module.css
@@ -2,7 +2,8 @@
   width: 100%;
   height: 50px;
   background-color: var(--color-bg-secondary);
-  border-bottom: 1px solid var(--color-gray-dimmed);
+  backdrop-filter: saturate(180%) blur(5px);
+  box-shadow: inset 0 -1px 0 0 var(--color-light-gray-border);
   position: fixed;
   top: 0;
   z-index: 10;
