--- a/src/client/styles/base/vars.css
+++ b/src/client/styles/base/vars.css
@@ -1,7 +1,7 @@
 /* 기본 속성 */
 :root {
   --color-primary: #f76e11;
-  --color-light: #ffffff;
+  --color-light: rgba(255, 255, 255, 0.9);
   --color-light-dimmed: #fffaf7;
   --color-dark: #1a1b1e;
   --color-dark-dimmed: #2b2c31;
