--- a/src/client/components/CardFeed/style/CardFeed.module.css
+++ b/src/client/components/CardFeed/style/CardFeed.module.css
@@ -85,3 +85,80 @@
     }
   }
 }
+
+.modal {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 20px;
+
+  .header {
+    width: calc(100% - 40px);
+    padding: 0 20px;
+    display: flex;
+    column-gap: 15px;
+
+    .img-wrapper {
+      height: 100px;
+      aspect-ratio: 1;
+      border-radius: 50%;
+      overflow: hidden;
+      background: radial-gradient(100% 417.22% at 100% 0%, #f76e11 0%, #fbbe94 52.6%, rgba(251, 190, 148, 0.49) 100%);
+
+      @media (max-width: 500px) {
+        height: 75px;
+      }
+
+      .profile {
+        object-fit: cover;
+      }
+    }
+
+    .info {
+      width: 100%;
+      padding-top: 3px;
+      display: flex;
+      flex-direction: column;
+      row-gap: 8px;
+      font-size: 18px;
+
+      @media (max-width: 500px) {
+        font-size: 14px;
+      }
+
+      .club-name {
+        font-size: 24px;
+        font-weight: 700;
+      }
+
+      .place {
+        font-weight: 500;
+      }
+
+      .date {
+        font-weight: 500;
+      }
+    }
+  }
+
+  .description {
+    padding: 0 20px;
+  }
+
+  .footer {
+    width: 100%;
+    padding: 0 20px;
+    padding-top: 15px;
+
+    button {
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid var(--color-primary);
+      background-color: var(--color-primary);
+      color: white;
+      font-weight: 600;
+    }
+  }
+}
