--- a/src/client/components/CardFeed/style/CardFeed.module.css
+++ b/src/client/components/CardFeed/style/CardFeed.module.css
@@ -15,13 +15,7 @@
     border-radius: 20px;
     background-color: var(--color-light);
     overflow: hidden;
-    box-shadow: 10px 20px 20px 0 rgb(92 95 112 / 8%);
     transition: all 150ms;
-
-    &:hover {
-      box-shadow: 10px 20px 30px 0 rgb(92 95 112 / 16%);
-      transform: translate3d(0, -4px, 0);
-    }
 
     .header {
       width: calc(100% - 40px);
@@ -73,9 +67,11 @@
       height: 80px;
       padding: 0 20px;
       overflow: hidden;
+      color: var(--color-text-black-dimmed);
       display: -webkit-box;
       -webkit-line-clamp: 4;
       -webkit-box-orient: vertical;
+      transition: all 150ms;
     }
 
     .footer {
@@ -83,6 +79,19 @@
       padding: 0 20px;
       padding-top: 20px;
       box-shadow: inset 0 1px 0 0 var(--color-light-gray-border);
+    }
+
+    @media (min-width: 1025px) {
+      box-shadow: 10px 20px 20px 0 rgb(92 95 112 / 8%);
+
+      &:hover {
+        box-shadow: 10px 20px 30px 0 rgb(92 95 112 / 16%);
+        transform: translate3d(0, -4px, 0);
+      }
+    }
+
+    &:hover .description {
+      color: var(--color-text-black);
     }
   }
 }
