--- a/src/client/styles/base/vars.css
+++ b/src/client/styles/base/vars.css
@@ -1,6 +1,7 @@
 /* 기본 속성 */
 :root {
-  --color-primary: #f76e11;
+  --color-primary: rgba(247, 110, 17, 1);
+  --color-primary-dimmed: rgba(247, 110, 17, 0.3);
   --color-light: rgba(255, 255, 255, 0.9);
   --color-light-dimmed: #fffaf7;
   --color-dark: #1a1b1e;
