--- a/src/client/components/pages/chat/style/Chat.module.css
+++ b/src/client/components/pages/chat/style/Chat.module.css
@@ -33,12 +33,14 @@
       border-right: 1px solid var(--color-light-gray-border);
 
       .me {
-        width: calc(100% - 40px);
-        padding: 25px 20px;
+        width: 100%;
+        height: 70px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         border-bottom: 1px solid var(--color-light-gray-border);
         border-top-left-radius: 20px;
-        text-align: center;
-        font-weight: 600;
+        font-weight: 700;
       }
 
       .section {
@@ -84,20 +86,68 @@
     }
 
     .chat-room {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      row-gap: 30px;
+      width: 100%;
       position: relative;
+      overflow: hidden;
+
+      .header {
+        width: calc(100% - 32px);
+        height: 70px;
+        padding: 0 16px;
+        display: flex;
+        align-items: center;
+        column-gap: 10px;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background: var(--color-light);
+        backdrop-filter: saturate(180%) blur(5px);
+        border-bottom: 1px solid var(--color-light-gray-border);
+        border-top-right-radius: 20px;
+        font-weight: 600;
+        z-index: 10;
+
+        .profile-img-wrapper {
+          width: 30px;
+          height: 30px;
+          display: flex;
+          align-items: center;
+          border-radius: 50%;
+          overflow: hidden;
+          background: radial-gradient(
+            100% 417.22% at 100% 0%,
+            #f76e11 0%,
+            #fbbe94 52.6%,
+            rgba(251, 190, 148, 0.49) 100%
+          );
+
+          .profile-img {
+            object-fit: cover;
+          }
+        }
+      }
 
       .chats-wrapper {
         width: 100%;
-        height: calc(100% - 50px);
+        height: calc(100% - 20px);
         overflow-y: scroll;
         display: flex;
         flex-direction: column-reverse;
         position: absolute;
-        bottom: 50px;
+        left: 0;
+        bottom: 0;
+
+        /* hide scroll bar 
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+        &::-webkit-scrollbar {
+          display: none;
+        } */
+
+        .dummy {
+          width: 100%;
+          min-height: 120px;
+        }
 
         .chat {
           width: calc(100% - 32px);
@@ -130,6 +180,49 @@
               }
             }
           }
+        }
+      }
+
+      .write-chat {
+        width: calc(100% - 20px);
+        min-height: 50px;
+        max-height: 110px;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        background: var(--color-light);
+        backdrop-filter: saturate(180%) blur(5px);
+        border-top: 1px solid var(--color-light-gray-border);
+
+        &.over-five-rows {
+          padding: 0 10px;
+        }
+
+        .textarea {
+          width: calc(100% - 70px);
+          outline: none;
+          border: none;
+          resize: none;
+          background: transparent;
+          overflow: hidden;
+
+          &.rows5 {
+            overflow: auto;
+          }
+        }
+
+        button {
+          width: 70px;
+          height: 44px;
+          outline: none;
+          border: none;
+          background: var(--color-primary);
+          color: white;
+          border-radius: 10px;
         }
       }
     }
