--- a/src/client/components/pages/chat/style/Chat.module.css
+++ b/src/client/components/pages/chat/style/Chat.module.css
@@ -8,6 +8,16 @@
   align-items: center;
   justify-content: center;
 
+  @media (max-width: 767px) {
+    height: 100vh;
+    padding-top: 0;
+  }
+
+  .back-button {
+    width: 20px;
+    height: 20px;
+  }
+
   .contents-wrapper {
     width: 100%;
     height: 80%;
@@ -21,8 +31,12 @@
     @media (max-width: 1024px) {
       width: 100%;
       height: 100%;
-      boarder: none;
+      border: none;
       border-radius: 0;
+    }
+
+    @media (max-width: 767px) {
+      grid-template-columns: 1fr;
     }
 
     .sidebar {
@@ -32,15 +46,21 @@
       justify-content: flex-start;
       border-right: 1px solid var(--color-light-gray-border);
 
-      .me {
+      .header {
         width: 100%;
         height: 70px;
         display: flex;
         align-items: center;
         justify-content: center;
+        position: relative;
         border-bottom: 1px solid var(--color-light-gray-border);
         border-top-left-radius: 20px;
         font-weight: 700;
+
+        .back-button {
+          position: absolute;
+          left: 20px;
+        }
       }
 
       .section {
@@ -137,9 +157,13 @@
         left: 0;
         bottom: 0;
 
-        .dummy {
+        .padding {
           width: 100%;
           min-height: 120px;
+
+          &.bottom {
+            min-height: 70px;
+          }
         }
 
         .chat {
@@ -160,7 +184,8 @@
               white-space: pre-wrap;
               padding: 10px;
               background: var(--color-primary-dimmed);
-              border-radius: 10px;
+              border-radius: 20px;
+              border-bottom-left-radius: 0;
             }
 
             &.my {
@@ -169,8 +194,9 @@
 
               .message {
                 background: var(--color-primary);
-                text-align: right;
                 color: white;
+                border-bottom-left-radius: 20px;
+                border-bottom-right-radius: 0;
               }
             }
           }
@@ -204,7 +230,7 @@
           background: transparent;
           overflow: hidden;
 
-          &.rows5 {
+          &.scroll {
             overflow: auto;
           }
         }
