start chat on /chat

--- a/src/client/components/pages/chat/style/Chat.module.css
+++ b/src/client/components/pages/chat/style/Chat.module.css
@@ -61,6 +61,12 @@
           position: absolute;
           left: 20px;
         }
+        .new-chat {
+          width: 20px;
+          height: 20px;
+          position: absolute;
+          right: 20px;
+        }
       }
 
       .section {
