--- a/src/client/components/pages/chat/style/Chat.module.css
+++ b/src/client/components/pages/chat/style/Chat.module.css
@@ -91,25 +91,6 @@
           font-weight: 700;
         }
 
-        .profile-img-wrapper {
-          width: 40px;
-          height: 40px;
-          display: flex;
-          align-items: center;
-          border-radius: 50%;
-          overflow: hidden;
-          background: radial-gradient(
-            100% 417.22% at 100% 0%,
-            #f76e11 0%,
-            #fbbe94 52.6%,
-            rgba(251, 190, 148, 0.49) 100%
-          );
-
-          .profile-img {
-            object-fit: cover;
-          }
-        }
-
         .username {
           font-size: 17px;
           font-weight: 500;
@@ -139,6 +120,7 @@
         padding: 0 16px;
         display: flex;
         align-items: center;
+        justify-content: space-between;
         column-gap: 10px;
         position: absolute;
         left: 0;
@@ -150,23 +132,14 @@
         font-weight: 600;
         z-index: 10;
 
-        .profile-img-wrapper {
-          width: 30px;
-          height: 30px;
+        .head {
           display: flex;
           align-items: center;
-          border-radius: 50%;
-          overflow: hidden;
-          background: radial-gradient(
-            100% 417.22% at 100% 0%,
-            #f76e11 0%,
-            #fbbe94 52.6%,
-            rgba(251, 190, 148, 0.49) 100%
-          );
+          column-gap: 10px;
+        }
 
-          .profile-img {
-            object-fit: cover;
-          }
+        .tail {
+          height: 20px;
         }
       }
 
@@ -267,6 +240,13 @@
           color: white;
           border-radius: 10px;
         }
+      }
+
+      .opposite-user-info {
+        width: 100%;
+        position: absolute;
+        left: 0;
+        top: 70px;
       }
     }
   }
