--- a/src/client/components/pages/chat/style/Chat.module.css
+++ b/src/client/components/pages/chat/style/Chat.module.css
@@ -244,9 +244,37 @@
 
       .opposite-user-info {
         width: 100%;
+        height: calc(100% - 70px);
+        padding-top: 80px;
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
         position: absolute;
         left: 0;
-        top: 70px;
+        top: 10px;
+        overflow-y: scroll;
+
+        .title {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          column-gap: 10px;
+        }
+
+        .basic-info {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          row-gap: 3px;
+          font-size: 14px;
+          color: var(--color-text-black-dimmed);
+        }
+
+        .body {
+          width: 80%;
+          margin: 0 auto;
+          margin-top: 15px;
+        }
       }
     }
   }
