--- a/src/client/components/pages/chat/style/Chat.module.css
+++ b/src/client/components/pages/chat/style/Chat.module.css
@@ -274,6 +274,34 @@
           width: 80%;
           margin: 0 auto;
           margin-top: 15px;
+
+          .request {
+            h2 {
+              margin: 30px 0;
+              color: var(--color-primary);
+            }
+            .head {
+              width: 100%;
+              margin-bottom: 30px;
+              display: flex;
+              flex-direction: column;
+              row-gap: 5px;
+              font-weight: 600;
+
+              .date,
+              .place,
+              .budget {
+                display: flex;
+                align-items: center;
+                column-gap: 5px;
+              }
+            }
+          }
+
+          .no-request {
+            text-align: center;
+            color: var(--color-text-black-dimmed);
+          }
         }
       }
     }
