--- a/src/client/components/pages/my/style/MyPage.module.css
+++ b/src/client/components/pages/my/style/MyPage.module.css
@@ -94,12 +94,18 @@
     }
 
     .body {
-      .info-body {
-        padding-top: 50px;
+      height: 100%;
+
+      .config-body {
+        height: 100%;
+        padding-top: 70px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+
+        h1 {
+          margin-bottom: 30px;
+        }
 
         .input-wrapper {
           width: 50%;
@@ -119,6 +125,10 @@
             padding: 5px;
             outline: none;
             border: 1px solid var(--color-light-gray-border);
+
+            &.available {
+              width: max-content;
+            }
           }
 
           textarea {
@@ -131,7 +141,7 @@
           }
         }
 
-        button {
+        .button {
           margin-top: 15px;
           padding: 10px 20px;
           border: none;
@@ -141,6 +151,15 @@
           font-size: 17px;
           font-weight: 500;
           cursor: pointer;
+
+          &.blue {
+            background: var(--color-blue);
+            margin-right: 10px;
+          }
+
+          &.red {
+            background: var(--color-red);
+          }
         }
       }
     }
