--- a/src/client/components/CardFeed/style/CardFeed.module.css
+++ b/src/client/components/CardFeed/style/CardFeed.module.css
@@ -57,9 +57,13 @@
     }
 
     .footer {
-      width: 100%;
+      width: calc(100% - 40px);
       padding: 0 20px;
       padding-top: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
       box-shadow: inset 0 1px 0 0 var(--color-light-gray-border);
     }
 
@@ -91,7 +95,7 @@
     width: calc(100% - 40px);
     padding: 0 20px;
     display: flex;
-    column-gap: 15px;
+    column-gap: 20px;
 
     .info {
       width: 100%;
@@ -110,11 +114,10 @@
         font-weight: 700;
       }
 
-      .place {
-        font-weight: 500;
-      }
-
-      .date {
+      .item {
+        display: flex;
+        align-items: center;
+        column-gap: 5px;
         font-weight: 500;
       }
     }
