--- a/src/client/components/pages/my/style/MyPage.module.css
+++ b/src/client/components/pages/my/style/MyPage.module.css
@@ -46,29 +46,6 @@
       justify-content: flex-start;
       border-right: 1px solid var(--color-light-gray-border);
 
-      .header {
-        width: 100%;
-        height: 70px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        border-bottom: 1px solid var(--color-light-gray-border);
-        border-top-left-radius: 20px;
-        font-weight: 700;
-
-        .back-button {
-          position: absolute;
-          left: 20px;
-        }
-        .new-chat {
-          width: 20px;
-          height: 20px;
-          position: absolute;
-          right: 20px;
-        }
-      }
-
       .section {
         width: calc(100% - 40px);
         padding: 20px;
@@ -102,6 +79,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        @media (max-width: 767px) {
+          padding-top: 0;
+        }
 
         h1 {
           margin-bottom: 30px;
@@ -163,5 +144,27 @@
         }
       }
     }
+  }
+}
+
+.header {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  border-bottom: 1px solid var(--color-light-gray-border);
+  border-top-left-radius: 20px;
+  font-weight: 700;
+  margin-bottom: 30px;
+
+  .back-button {
+    position: absolute;
+    left: 20px;
+  }
+
+  &.sidebar-header {
+    margin-bottom: 0;
   }
 }
